<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="5"
    >

    <Button
        android:id="@+id/btn7"
        android:text="@string/seven"
        style="@style/FunctionalButtons"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn8"
        android:text="@string/eight"
        style="@style/FunctionalButtons"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn9"
        android:text="@string/nine"
        style="@style/FunctionalButtons"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn4"
        android:text="@string/four"
        style="@style/FunctionalButtons"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn5"
        android:text="@string/five"
        style="@style/FunctionalButtons"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn6"
        android:text="@string/six"
        style="@style/FunctionalButtons"
        android:layout_column="2"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn1"
        android:text="@string/one"
        style="@style/FunctionalButtons"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn2"
        android:text="@string/two"
        style="@style/FunctionalButtons"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn3"
        android:text="@string/three"
        style="@style/FunctionalButtons"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn_dot"
        android:text="@string/dot"
        style="@style/FunctionalButtons"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn0"
        android:text="@string/zero"
        style="@style/FunctionalButtons"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/btn_percent"
        android:text="@string/percent"
        style="@style/FunctionalButtons"
        android:layout_column="2"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/del"
        style="@style/FunctionalButtons2"
        android:text="@string/del"
        android:layout_column="3"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/div"
        style="@style/FunctionalButtons2"
        android:text="@string/div"
        android:layout_columnWeight="1"
        android:layout_column="3"
        android:layout_row="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/mul"
        style="@style/FunctionalButtons2"
        android:text="@string/mul"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        />

    <Button
        android:id="@+id/minus"
        style="@style/FunctionalButtons2"
        android:text="@string/minus"
        android:layout_columnWeight="1"
        android:layout_column="3"
        android:layout_row="3"
        android:layout_rowWeight="1"

        />

    <Button
        android:id="@+id/plus"
        style="@style/FunctionalButtons2"
        android:text="@string/plus"
        android:layout_columnWeight="1"
        android:layout_column="3"
        android:layout_row="4"
        android:layout_rowWeight="1"
        />


    <Button
        android:id="@+id/equals"
        style="@style/FunctionalButtons2"
        android:text="@string/equals"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_row="4"
        android:layout_rowWeight="1"
        />




</GridLayout>